--- a/css/styles.css
+++ b/css/styles.css
@@ -550,6 +550,17 @@ a {
   margin-bottom: 76px; 
   }
 
+.footer-link-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  fill: #f4f4fd;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .footer-three {
   align-items: center;
