--- a/css/styles.css
+++ b/css/styles.css
@@ -258,26 +258,26 @@ a {
 }
 
 .hero-btn {
-    display: block;
-      margin: 0 auto;
-      font-family: "Roboto", sans-serif;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.04em;
-      color: #ffffff;
-      cursor: pointer;
-      background: #4d5ae5;
-      padding: 16px 32px;
-      border-radius: 4px;
-      height: 56px;
-      align-items: flex-start;
-      justify-content: flex-start;
-      flex-direction: row;
-      gap: 10px;
-      border: none;
-      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  display: block;
+  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background: #4d5ae5;
+  padding: 16px 32px;
+  border-radius: 4px;
+  height: 56px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 10px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 }
 
 /* feature*/
@@ -984,11 +984,12 @@ a {
 
   .hero-btn {
     min-width: 169px;
+    margin-top: 36px;
   }
 
-  .container {
+  /* .container {
     width: 1158px;
-  }
+  } */
 
   .container-mission {
     flex-direction: row;
